[package]
name = "graphql-normalize"
version = "0.1.3"
edition = "2021"
authors = ["Jeffery Utter <jeff@jeffutter.com>"]
readme = "README.md"
description = "Normalize (format and sort) GraphQL queries"
license = "MIT"
repository = "https://github.com/jeffutter/graphql-document-utils"

[dependencies]
graphql-parser = "0.4.1"
